add jest + done cau 3.1.1